--- a/package.json
+++ b/package.json
@@ -7,10 +7,21 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.10.0",
+    "buffer": "^6.0.3",
+    "cheerio": "^1.1.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "http-proxy-middleware": "^3.0.5",
+    "jsdom": "^26.1.0",
+    "next": "^15.3.4",
+    "puppeteer": "^24.10.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.89.2",
+    "web-vitals": "^2.1.4",
+    "ws": "^8.18.2"
   },
   "scripts": {
     "start": "react-scripts start",
